--- a/css/creative.css
+++ b/css/creative.css
@@ -16,9 +16,10 @@
   letter-spacing: 2px;
   font-family: "Montserrat", sans-serif;
 }
-.hero h1 {
+.hero h1, .typed {
   font-size: 50px;
   line-height: 1.3;
+  opacity: 0.8;
 }
 .hero h1 span {
   font-size: 25px;
@@ -521,9 +522,27 @@ footer .footer-below {
 .hi-icon:hover {
     color: white;
 }
-
 .hi-icon {
   color: #126AA1;
 }
 
+.typed {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
 
+.f1 {
+  font-family: 'Merriweather', serif;
+}
+.f2 {
+  font-family: 'Fjalla One', sans-serif;
+}
+
+#technical {
+  background-color: black;
+  opacity: 0.8;
+  color: white;
+}
