--- a/css/creative.css
+++ b/css/creative.css
@@ -5,14 +5,14 @@
 
 .hero {
   position: relative;
-  background: url(http://i.giphy.com/gBxL0G0DqZd84.gif) no-repeat center center fixed;
+  background: url("../img/spaceship.gif") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   text-align: center;
   color: #fff;
   padding-top: 110px;
-  min-height: 500px;
+  min-height: 600px;
   letter-spacing: 2px;
   font-family: "Montserrat", sans-serif;
 }
@@ -139,7 +139,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 100px 0;
+  padding: 50px;
 }
 aside {
   padding: 50px 0;
@@ -502,21 +502,17 @@ body {
 }
 
 footer {
-  color: white;
+    color: black;
+    font-size: 35px;
 }
-footer h3 {
-  margin-bottom: 30px;
+footer ul li {
+    display: inline-block;
+    text-align: center;
+    margin-left: 5%;
+    vertical-align: top;
 }
-footer .footer-above {
-  padding-top: 50px;
-  background-color: #2C3E50;
-}
-footer .footer-col {
-  margin-bottom: 50px;
-}
-footer .footer-below {
-  padding: 25px 0;
-  background-color: #233140;
+footer a:hover {
+    opacity: 0.5;
 }
 
 .hi-icon:hover {
@@ -545,4 +541,18 @@ footer .footer-below {
   background-color: black;
   opacity: 0.8;
   color: white;
+  font-family: 'Fjalla One', sans-serif;
+}
+#portfolio {
+    background-color: #2e6da4;
+    color: white;
+    font-size: 40px;
+}
+#about {
+    background-color: orangered;
+    color: white;
+    height: 600px;
+}
+#about a {
+  color: white
 }
